assets/css/style.css
/* ... */
@media only screen and (max-width: 968px) {
  .find-out-more .person {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto;
    grid-column-gap: var(--general-padding);
    grid-template-areas: "photo"
    "info";
    font-size: 1.1em;
  }
}

.find-out-more .person .photo {
  grid-area: photo;
  object-fit: contain;
  height: 200px;
  overflow: hidden;
  background-size: contain;
  background-repeat: no-repeat;
  width: 100%;
  background-position-y: top;
}

.find-out-more .person .photo img {
  height: 100%;
}

.find-out-more .person .info {
  grid-area: info;
}

.find-out-more .person .info .name {
  font-weight: bold;
}

.find-out-more .person .info .role {
  
}

.find-out-more .person .info .email {
  font-size: 0.8em;
  hyphens: auto;
  -webkit-hyphens: auto;
}

.find-out-more .person .info .phone {
  font-size: 0.8em;
}

@media only screen and (max-width: 968px) {
  .find-out-more .person .info {
    padding-top: 10px;
}
}

.find-out-more h1 {
  grid-area: title
}

.find-out-more .info {
  grid-area: info;
}

.find-out-more .photo {
  grid-area: photo;
}

#home p {
  font-size: 1.4em;
  line-height: 2em;
}

#home strong {
  color: var(--highlight-colour);
}

section article {
  grid-area: content;
}

section article h1 {
  font-size: 3em;
}

section article h2 {
  font-family: var(--body-font);
  font-size: 1.6em;
  text-transform: none;
  font-weight: 400;
}

.cookie-notice {
  position: fixed;
  left: 0px;
  bottom: -300px;
  background-color: var(--cookie-notice-background);
  color: var(--cookie-notice-foreground);
  width: 100%;
  padding-top: var(--general-padding);
  padding-bottom: var(--general-padding);

  font-size: 0.9em;

  display: grid;
  grid-template-areas: ". text text text text text text text text decline decline accept accept .";
  transition: bottom 0.5s ease-in-out;
  align-items: center;
  grid-row-gap: var(--general-padding);

  -webkit-box-shadow: 0px 0px 68px -20px rgba(0,0,0,0.5);
  -moz-box-shadow: 0px 0px 68px -20px rgba(0,0,0,0.5);
  box-shadow: 0px 0px 68px -20px rgba(0,0,0,0.5);
}

.cookie-notice .notice {
  grid-area: text;
}

.cookie-notice .button.accept {
  grid-area: accept;
  background: var(--cookie-notice-foreground);
  color: var(--cookie-notice-background);
}

.cookie-notice .button.decline {
  grid-area: decline;
  background-color: transparent;
  border-width: 2px;
  border-color: var(--cookie-notice-foreground);
  color: var(--cookie-notice-foreground);
  border-style: solid;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  height: 2.2em;
}

@media only screen and (max-width: 968px) {
  .cookie-notice {
    grid-template-areas: ". text text text text ."
    ". decline decline accept accept .";
  }
}

/* Desktop positioning of home hero image */
#home-hero {
  background-position: center;
}

@media only screen and (max-width: 968px) {
  #home-hero {
    background-position: center 0px;
  }
}

/* Talks react app heading size fix */
.talks-react-app h1 {
  font-size: 2em;
}

/* image background position code */

#midweek-photo-right {
  background-position: right center;
}

@media only screen and (max-width: 1220px) and (min-width: 968px) {
  #midweek-photo-right {
    background-position: 600px center;
  }
}

#families-hero {
  background-position: right;
}

@media only screen and (max-width: 400px) {
  #families-hero {
    background-position: center;
  }
}

@media only screen and (max-width: 1280px) and (min-width: 968px) {
  #youth-photo-right {
    background-position-x: 640px;
  }
}

@media only screen and (max-width: 400px) {
  #students-hero {
    background-position: center;
  }
}

#talks-hero {
  background-position: center;
}

/* Growing Together section mobile height fix */
/* I'M SORRY THIS IS THE WORST HACK OF ALL TIME */
@media only screen and (max-width: 968px) {
  .info-panel.full-bleed.darken.mobile-height-fix .photo.centre {
    display: none;
  }

  .info-panel.full-bleed.darken.mobile-height-fix {
    background-image: none!important;
  }
}


    

